<resources>
    <string name="app_name">ALSC</string>
    <string name="register_error_msg1">不能为空</string>
    <string name="register_error_msg2">不一致</string>
    <string name="register_error_msg3">用户名请输入6位以上包含数字字母</string>
    <string name="register_error_msg4">手机号格式不正确</string>
    <string name="register_error_msg5">登录密码请输入6位以上包含数字字母</string>
    <string name="register_error_msg6">支付密码请输入6位以上包含数字字母</string>
    <string name="home_bar_chat">聊天</string>
    <string name="home_bar_friends">好友</string>
    <string name="home_bar_find">发现</string>
    <string name="home_bar_money">资产</string>
    <string name="input_tranfer_money">请输入转账金额</string>
    <string name="menu_item_chat">聊天设置</string>
    <string name="menu_item_security">安全设置</string>
    <string name="menu_item_language_switching">语言切换</string>
    <string name="menu_item_about">关于ASCL</string>
    <string name="menu_item_invite_friends">分享好友</string>
    <string name="menu_item_system">系统公告</string>
    <string name="menu_item_switching_accounts">切换账户</string>
    <string name="property_drawer_qrcode_scanner">扫一扫</string>
    <string name="addr_error_tips">地址填写不正确</string>
    <string name="security_change_login_password">修改登录密码</string>
    <string name="security_change_pay_password">修改支付密码</string>
    <string name="security_google">谷歌验证</string>
    <string name="security_phone">手机</string>
    <string name="security_email">E-mail</string>
    <string name="security_binded">已绑定</string>
    <string name="security_no_bind">未绑定</string>
    <string name="security_opened">已开启</string>
    <string name="security_no_open">未开启</string>
    <string name="open_camera_light">扫描二维码需要打开相机和散光灯的权限</string>
    <string name="too_an">环境过暗，请打开闪光灯</string>
    <string name="security_pass_word_old">旧密码:</string>
    <string name="security_pass_word_old_des">若包含字母，请注意区分大小写</string>
    <string name="security_pass_word_new">新密码:</string>
    <string name="security_pass_word_new_des">6-12位，至少含数字/字母2种组合</string>
    <string name="security_pass_word_pay_new_des">建议使用6-12位大小写字母+数字排列组合</string>
    <string name="sc_dialog_title_email">若未收到验证码，请检查邮件垃圾箱</string>
    <string name="sc_dialog_title_phone">若未收到验证码，请检查骚扰拦截短信</string>
    <string name="sc_dialog_email">邮箱验证</string>
    <string name="sc_dialog_phone">手机验证</string>
    <string name="sc_dialog_email_code_des">请输入邮箱验证码</string>
    <string name="sc_dialog_phone_code_des">请输入手机验证码</string>
    <string name="sc_get_code">获取验证码</string>
    <string name="sc_get_code_retry">%d 秒后可重发</string>
    <string name="security_google_identity">绑定谷歌身份验证</string>
    <string name="security_google_identity_title">请妥善备份密钥以防丢失</string>
    <string name="security_google_identity_des">保存二维码到手机或复制密钥到剪贴板可能会有安全风险，请妥善保存</string>
    <string name="security_google_code">谷歌验证码</string>
    <string name="security_google_code_des">请输入谷歌验证码</string>
    <string name="security_phone_binded_title">手机验证</string>
    <string name="security_phone_bind">绑定手机</string>
    <string name="security_phone_modify">更换手机</string>
    <string name="security_phone_des">输入手机号</string>
    <string name="security_phone_code">短信验证码</string>
    <string name="security_phone_code_des">若未收到短信，请检查骚扰拦截短信</string>
    <string name="security_phone_error">未绑定手机，请选择其他验证</string>
    <string name="security_email_error">未绑定邮箱，请选择其他验证</string>
    <string name="security_email_bind">绑定邮箱</string>
    <string name="security_email_modify">更换邮箱</string>
    <string name="security_email_address">输入邮箱地址</string>
    <string name="security_email_des">输入邮箱地址</string>
    <string name="security_email_code">邮箱验证码</string>
    <string name="security_email_code_des">输入邮箱验证码</string>
    <string name="security_name_update">更改昵称</string>
    <string name="security_name_update_hine">请输入名称</string>
    <string name="security_name_update_des">好名字可以让您的朋友更容易记住你</string>
    <string name="language_chinese_simple">简体中文</string>
    <string name="language_chinese_traditional">繁体中文</string>
    <string name="language_english">English</string>
    <string name="language_japan">日本语</string>
    <string name="language_korean">한국어</string>
    <string name="user_info_setting">个人信息</string>
    <string name="user_info_head_img">头像</string>
    <string name="user_info_nick">昵称</string>
    <string name="user_info_id">ID号</string>
    <string name="user_info_sex">性别</string>
    <string name="user_info_qrcode">二维码名片</string>
    <string name="user_info_area">地区</string>
    <string name="register_phone_area">请选择地区或国家</string>
    <string name="register_phone_area_des">国家或地区注册后不能修改</string>
    <string name="register_phone_area_search">搜索国家或地区</string>
    <string name="notice_no_msg">没有通知</string>
    <string name="list_footer_no_data">没有更多了</string>
    <string name="list_footer_loading">加载中</string>
    <string name="btn_sure">确认</string>
    <string name="btn_next">下一步</string>
    <string name="btn_reset">重置密码</string>
    <string name="btn_cancle">取消</string>
    <string name="btn_send">发送</string>
    <string name="btn_save">保存</string>
    <string name="auto_scan">将条码放入框内，即可自动扫描</string>
    <string name="scan_qrcode">识别图片中的码</string>
    <string name="wt_type_make">创建钱包类型</string>
    <string name="wt_type_change">去中心化的DAPP,冷热钱包自由切换</string>
    <string name="wt_type_chain">跨链钱包</string>
    <string name="wt_type_online">在线钱包</string>
    <string name="wt_type_chain_describe">构建各种公链价值流转通道,实现多种数字资产业务创新</string>
    <string name="wt_type_online_describe">打造ALSC数字经济生态应用</string>
    <string name="wt_type_next">下一步</string>
    <string name="wt_type_has_alsc">已有ALSC账号?</string>
    <string name="wt_type_login">登录</string>
    <string name="pwd">密码</string>
    <string name="again_pwd">重复密码</string>
    <string name="load_wallet_by_mnemonic_input_tip">请检查您的助记词</string>
    <string name="load_wallet_by_mnemonic_help">什么是助记词？</string>
    <string name="load_wallet_already_exist">钱包已存在</string>
    <string name="import_wallet_fail">导入钱包失败</string>
    <string name="import_wallet_success">导入钱包成功</string>
    <string name="send_success">发送成功:</string>
    <string name="wc_code">创建跨链钱包</string>
    <string name="wc_code_important">密码用于保护私钥与交易授权,强度非常重要.</string>
    <string name="wc_code_warn">非中心化系统的密码一旦丢失,则无法找回,请妥善保管!</string>
    <string name="wc_code_account">账户备注</string>
    <string name="wc_code_input_account">请输入账户名称</string>
    <string name="wc_code_wallet_pwd">钱包密码</string>
    <string name="wc_code_input_wallet_pwd">请输入钱包密码</string>
    <string name="wc_code_input_wallet_pwd_again">请再次输入钱包密码</string>
    <string name="wc_code_pwd_pattern">钱包密码建议至少8-16位:大写字母、小写字母、数字3种组成</string>
    <string name="create_wallet_name_repeat_tips">钱包名称重复</string>
    <string name="create_wallet_name_input_tips">请输入钱包名称</string>
    <string name="create_wallet_pwd_input_tips">密码不能为空</string>
    <string name="create_wallet_pwd_confirm_input_tips">密码不一致，请重新输入</string>
    <string name="deriving_wallet_tip">导出钱包中…</string>
    <string name="loading_wallet_tip">导入钱包中…</string>
    <string name="deleting_wallet_tip">删除钱包中…</string>
    <string name="creating_wallet_tip">创建钱包中…</string>
    <string name="saving_wallet_tip">保存钱包中…</string>
    <string name="permission_denied_forever_message">We need some of the permissions you rejected or the system failed to apply failed, please manually set to the page authorize, otherwise the function can\'t be used normally!</string>
    <string name="wc_backup">备份</string>
    <string name="wc_backup_single">密语用于恢复钱包,请抄写12个单词</string>
    <string name="wc_backup_double">抄好后的密语请妥善保管</string>
    <string name="wc_backup_good">this is my good shen</string>
    <string name="wv_validate">验证</string>
    <string name="wv_done">完成</string>
    <string name="wv_reset">重新生成密语</string>
    <string name="wv_validate_sure">按照顺序点击密语,以确认正确备份</string>
    <string name="wc_hote">创建在线钱包</string>
    <string name="wc_hote_login">登录用户名</string>
    <string name="wc_hote_login_hint">请输入登录用户名</string>
    <string name="wc_hote_invate_code">输入邀请码</string>
    <string name="wc_hote_invate_code_hint">请输入邀请码(必填)</string>
    <string name="wc_hote_picture">输入图片验证码</string>
    <string name="wc_hote_change">看不清,换一张</string>
    <string name="verify_backup_failed">备份失败，请检查你的助记词</string>
    <string name="wh_phone">手机验证</string>
    <string name="wh_phone_area_default">中国</string>
    <string name="wh_phone_area_code_default">+86</string>
    <string name="wh_phone_change">使用邮箱号或者手机号验证,二选其一即可</string>
    <string name="wh_phone_valite_hint">请输入你的手机</string>
    <string name="wh_phone_valite_number">建议使用6-12位字母+数字</string>
    <string name="wh_phone_valite_number_zoom">建议使用6-12位字母+数字排列组合</string>
    <string name="wh_valite_number">输入验证码</string>
    <string name="wh_valite_number_hint">请输入验证码</string>
    <string name="wh_valite_number_get">获取验证码</string>
    <string name="wh_valite_email">邮箱验证</string>
    <string name="wh_email_valite_hint">请输入您的邮箱</string>
    <string name="wh_find_pwd_email">邮箱找回</string>
    <string name="wh_find_pwd_phone">手机找回</string>
    <string name="wh_set_pwd">设置密码</string>
    <string name="wh_set_pwd_save">登录密码用于登录ALSC钱包,支付密码用于保障您ALSC钱包的资产安全,请妥善保障.</string>
    <string name="wh_sp_login_pwd">登录密码</string>
    <string name="wh_sp_login_pwd_hint">请输入你的登录密码</string>
    <string name="wh_sp_login_pwd_sure">确认登录密码</string>
    <string name="wh_sp_login_pwd_sure_hint">请再次确认</string>
    <string name="wh_sp_pay_pwd">支付密码</string>
    <string name="wh_sp_pay_pwd_hint">请输入你的支付密码</string>
    <string name="wh_sp_pwd_pattern">建议使用6-12位大小字母+数字排列组合</string>
    <string name="wh_sp_pay_pwd_sure">确认支付密码</string>
    <string name="wh_sp_pay_pwd_sure_hint">请再次输入</string>
    <string name="wh_register">注册成功,开启手势密码</string>
    <string name="wh_register_account">为保障您的账户安全</string>
    <string name="wh_register_unlock">请设置手势密码用于解锁</string>
    <string name="wh_register_no_set">暂不设置</string>
    <string name="wh_register_set">立即设置</string>
    <string name="wh_login_alsc">登录ALSC</string>
    <string name="wh_login">登录</string>
    <string name="wh_alsc_describe">欢迎来到ALSC全球首创三维一体造福生态</string>
    <string name="wh_login_user">登录用户名</string>
    <string name="wh_login_user_hint">请输入登录用户名</string>
    <string name="wh_login_pwd">密码</string>
    <string name="wh_login_pwd_hint">请输入密码</string>
    <string name="pwd_not_right">密码不正确</string>
    <string name="wh_login_pwd_forget">忘记密码</string>
    <string name="wh_forgot_pwd_title">找回密码</string>
    <string name="wh_forgot_pwd_title_des">为保障账户安全，您需要进行安全验证</string>
    <string name="wh_forgot_pwd_methods">选择找回方式</string>
    <string name="wh_forgot_pwd_methods_des">请输入邮箱或手机号码</string>
    <string name="wh_reset_pwd_title">重新设置密码</string>
    <string name="wh_reset_pwd_title_des">登录密码用于登录ALSC钱包</string>
    <string name="wh_alsc_transfer_menoy">转账金额</string>
    <string name="wh_save_address">接收地址</string>
    <string name="wh_input_alsc_address">输入ALSC地址</string>
    <string name="wh_send_address">发送地址</string>
    <string name="wh_miners_fee">矿工费</string>
    <string name="wh_conversion_alsc">0.0000192 ALSC ≈ ¥ 0.9708</string>
    <string name="wh_conversion_cny">≈ 7.625 CNY</string>
    <string name="wh_advice_conversion_alsc">建议0.0000192 ALSC ≈ ¥ 0.9708</string>
    <string name="wh_slow">慢</string>
    <string name="wh_fast">快</string>
    <string name="wh_ok">确定</string>
    <string name="detail_type">类型</string>
    <string name="detail_status">状态</string>
    <string name="detail_time">时间</string>
    <string name="detail_address">地址</string>
    <string name="detail_txld">Txld</string>
    <string name="detail_charge_money">充币</string>
    <string name="detail_charge_money_success">充币成功</string>
    <string name="detail_at_time">21:50:08 2020/8/27</string>
    <string name="detail_address_detail">eadfdfdggffdfdfdfgdffd</string>
    <string name="wallet_import_help_word">请填写你的助记词</string>
    <string name="wallet_import_space">英文单词请按空格分隔单词</string>
    <string name="wallet_import_start">开始导入</string>
</resources>