<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1a2135"
        android:orientation="vertical">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:src="@mipmap/icon_back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                style="@style/WalletCodeTitleTextStyle"
                android:text="@string/wc_code" />

            <TextView
                style="@style/WalletCodeTextStyle"
                android:text="@string/wc_code_important" />

            <TextView
                style="@style/WalletCodeTextStyle"
                android:text="@string/wc_code_warn" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="20dp">

            <View
                android:layout_width="8dp"
                android:layout_height="24dp"
                android:background="@color/yellow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/wc_code_account"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16" />

        </LinearLayout>

        <EditText
            android:id="@+id/account"
            style="@style/WalletCodeEditStyle"
            android:layout_marginTop="10dp"
            android:hint="@string/wc_code_input_account"
            android:textColorHint="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="20dp">

            <View
                android:layout_width="8dp"
                android:layout_height="24dp"
                android:background="@color/yellow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/wc_code_wallet_pwd"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16" />

        </LinearLayout>

        <EditText
            android:id="@+id/password"
            style="@style/WalletCodeEditStyle"
            android:layout_marginTop="10dp"
            android:hint="@string/wc_code_input_wallet_pwd"
            android:inputType="textPassword"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/confirm_password"
            style="@style/WalletCodeEditStyle"
            android:layout_marginTop="16dp"
            android:hint="@string/wc_code_input_wallet_pwd_again"
            android:inputType="textPassword"
            android:textColorHint="@color/black" />

        <TextView
            style="@style/WalletCodeTextStyle"
            android:layout_width="320dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/wc_code_pwd_pattern"
            android:textSize="@dimen/text_size_11" />

        <Button
            android:id="@+id/btn_next"
            style="@style/WalletCodeBtnStyle"
            android:layout_marginTop="80dp"
            android:text="@string/wt_type_next" />
    </LinearLayout>
</layout>
