<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1a2135"
        android:orientation="vertical">

<!--        导入钱包-->
        <include
            android:id="@+id/common_header"
            layout="@layout/activity_hot_wallet_header" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/wallet_import_help_word"
            android:layout_marginLeft="50dp"
            />

        <EditText
            android:id="@+id/tvMnemonic"
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:padding="20dp"
            android:textSize="@dimen/text_size_17"
            android:hint="@string/wallet_import_space"
            android:textColorHint="@color/white"
            android:background="@drawable/bg_black_tranprent_radius" />

        <EditText
            android:id="@+id/pwd"
            style="@style/WalletCodeEditStyle"
            android:layout_marginTop="10dp"
            android:hint="@string/pwd"
            android:textColorHint="@color/black" />
        <EditText
            android:id="@+id/pwd_sure"
            style="@style/WalletCodeEditStyle"
            android:layout_marginTop="10dp"
            android:hint="@string/again_pwd"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/btn_next"
            style="@style/WalletCodeBtnStyle"
            android:text="@string/wallet_import_start"
            android:layout_marginTop="220dp" />
    </LinearLayout>
</layout>
